# financial-filing-analyzer

./: .gitignore  README.md  pyproject.toml  run.sh
backend/: __init__.py  api.py  cache.py  chunking.py  deltas.py  entities.py  index_store.py  kpi_extract.py  report.py  sec_ingest.py  text_clean.py  valuation.py
data/: companies.yaml
frontend/public/: index.html
tests/: __init__.py  test_chunking.py  test_deltas.py  test_entities.py  test_index_store.py  test_kpi_extract.py  test_sec_ingest.py  test_text_clean.py
tests/fixtures/: sample_filing_text.txt
